--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
 body {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Montserrat', 'bebasneo' sans-serif;
+    background-color: #eee;
 }
+.bebas{
+    font-family: 'Bebas Neue', sans-serif;}
